# dq_llm_ver_2

./: .env  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
dq_llm/: asgi.py  settings.py  urls.py  wsgi.py
metadata/: consumers.py  event_handler.py  routing.py
metadata/managers/: session_manager.py
metadata/project/: taskweaver_config.json
metadata/project/plugins/: database_query.py  database_query.yaml  datasource_info.py  datasource_info.yaml  metadata_fetch.py  metadata_fetch.yaml
metadata/project/plugins/.meta/: meta_database_query.yaml  meta_datasource_info.yaml  meta_metadata_fetch.yaml
