[tool.poetry]
name = "dq-llm"
version = "0.1.0"
description = ""
authors = ["Bavid Lynx <shivakharbanda11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
channels = {extras = ["daphne"], version = "^4.1.0"}
django = "^5.0.4"
channels-redis = "^4.2.0"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"
jinja2 = "^3.1.3"
pypandoc = "^1.13"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
